--- a/case.html
+++ b/case.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Khand" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="img/favicon-96x96.png"/>
     
-    <title>Missing Person Cases</title>
+    <title>Missing Person Cases Now being tracked!!!!!! YAY</title>
 </head>
 <body>
     <h1>Other Cases</h1>
